Fix one extremely long words in titles or links not wrapping to the new line
CSS word-break: break-all applied 

BugId: 12604

git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@59706 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/article.scss
+++ b/skins/oasis/css/core/article.scss
@@ -365,6 +365,9 @@
 	.wikiaPlaceholder > div {
 		text-align: center;
 	}
+	.fullMedia {
+		word-break: break-all;
+	}
 }
 
 /**
